Fix bug where lading gif was not showing

--- a/styles/default-style.less
+++ b/styles/default-style.less
@@ -128,7 +128,8 @@ body {
 }
 #tabs li {
 }
-#left-menu li.loading {
+#left-menu li.loading,
+#left-menu li.selected.loading {
     background-image: url(/images/loading.gif);
     background-repeat: no-repeat;
     background-position: center right;
